디테일 페이지연결

--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
     <section class="rookie-brands searchable" id="brands">
       <div class="rookie_container">
         <h2 class="section-title">떠오르는 신규 브랜드</h2>
-        <a href="#" class="more-link">더 보기 </a>
+        <p class="more-link">더 보기 </p>
         <div class="brand-grid">
           <div class="swiper-wrapper">
             <!-- 브랜드 아이템 1: 바다 한 조각 -->
@@ -688,7 +688,7 @@
             <!-- 플라스틱 소재 카테고리 -->
             <div class="material-goods plastic">
               <div class="material-goods-card">
-                <a href="#">
+                <a href="detail-page.html">
                   <img src="images/material images/plastic01.png" alt="소재별 굿즈 01" />
                   <div class="materal-textbox">
                     <p class="m_title">모어포 모레</p>
@@ -705,7 +705,7 @@
                 </a>
               </div>
               <div class="material-goods-card">
-                <a href="#">
+                <a href="detail-page.html">
                   <img src="images/material images/plastic02.png" alt="소재별 굿즈 02" />
                   <div class="materal-textbox">
                     <p class="m_title">아차시픈</p>
@@ -729,7 +729,7 @@
                 </a>
               </div>
               <div class="material-goods-card hidden">
-                <a href="#">
+                <a href="detail-page.html">
                   <img src="images/material images/plastic03.png" alt="소재별 굿즈 03" />
                   <div class="materal-textbox">
                     <p class="m_title">lifesalm</p>
@@ -753,7 +753,7 @@
                 </a>
               </div>
               <div class="material-goods-card hidden">
-                <a href="#">
+                <a href="detail-page.html">
                   <img src="images/material images/plastic04.png" alt="소재별 굿즈 04" />
                   <div class="materal-textbox">
                     <p class="m_title">피그랩(PIGLAB)</p>
@@ -773,7 +773,7 @@
             <!-- 천 소재 카테고리 -->
             <div class="material-goods clothes">
               <div class="material-goods-card">
-                <a href="#">
+                <a href="detail-page.html">
                   <img src="images/material images/clothe01.png" alt="소재별 굿즈 01" />
                   <div class="materal-textbox">
                     <p class="m_title">피연</p>
@@ -790,7 +790,7 @@
                 </a>
               </div>
               <div class="material-goods-card">
-                <a href="#">
+                <a href="detail-page.html">
                   <img src="images/material images/clothe02.png" alt="소재별 굿즈 02" />
                   <div class="materal-textbox">
                     <p class="m_title">focean</p>
@@ -807,7 +807,7 @@
                 </a>
               </div>
               <div class="material-goods-card hidden">
-                <a href="#">
+                <a href="detail-page.html">
                   <img src="images/material images/clothe03.png" alt="소재별 굿즈 03" />
                   <div class="materal-textbox">
                     <p class="m_title">OWNU</p>
@@ -824,7 +824,7 @@
                 </a>
               </div>
               <div class="material-goods-card hidden">
-                <a href="#">
+                <a href="detail-page.html">
                   <img src="images/material images/clothe04.png" alt="소재별 굿즈 04" />
                   <div class="materal-textbox">
                     <p class="m_title">프로젝트 노하우</p>
@@ -844,7 +844,7 @@
             <!-- 목재 소재 카테고리 -->
             <div class="material-goods wood">
               <div class="material-goods-card">
-                <a href="#">
+                <a href="detail-page.html">
                   <img src="images/material images/wood01.png" alt="소재별 굿즈 01" />
                   <div class="materal-textbox">
                     <p class="m_title">ONNANA</p>
@@ -861,7 +861,7 @@
                 </a>
               </div>
               <div class="material-goods-card">
-                <a href="#">
+                <a href="detail-page.html">
                   <img src="images/material images/pd_img (28).png" alt="소재별 굿즈 02" />
                   <div class="materal-textbox">
                     <p class="m_title">QUOTT</p>
@@ -878,7 +878,7 @@
                 </a>
               </div>
               <div class="material-goods-card hidden">
-                <a href="#">
+                <a href="detail-page.html">
                   <img src="images/material images/wood03.png" alt="소재별 굿즈 03" />
                   <div class="materal-textbox">
                     <p class="m_title">비비작 공작소</p>
@@ -895,7 +895,7 @@
                 </a>
               </div>
               <div class="material-goods-card hidden">
-                <a href="#">
+                <a href="detail-page.html">
                   <img src="images/material images/wood04.png" alt="소재별 굿즈 04" />
                   <div class="materal-textbox">
                     <p class="m_title">ODD.TRAIN</p>
@@ -915,7 +915,7 @@
             <!-- 유리 소재 카테고리 -->
             <div class="material-goods glass">
               <div class="material-goods-card">
-                <a href="#">
+                <a href="detail-page.html">
                   <img src="images/material images/glass01.png" alt="소재별 굿즈 01" />
                   <div class="materal-textbox">
                     <p class="m_title">바다 한 조각</p>
@@ -932,7 +932,7 @@
                 </a>
               </div>
               <div class="material-goods-card">
-                <a href="#">
+                <a href="detail-page.html">
                   <img src="images/material images/glass02.png" alt="소재별 굿즈 02" />
                   <div class="materal-textbox">
                     <p class="m_title">유리노리</p>
@@ -949,7 +949,7 @@
                 </a>
               </div>
               <div class="material-goods-card hidden">
-                <a href="#">
+                <a href="detail-page.html">
                   <img src="images/material images/glass03.png" alt="소재별 굿즈 03" />
                   <div class="materal-textbox">
                     <p class="m_title">lifesalm</p>
@@ -966,7 +966,7 @@
                 </a>
               </div>
               <div class="material-goods-card hidden">
-                <a href="#">
+                <a href="detail-page.html">
                   <img src="images/material images/glass04.png" alt="소재별 굿즈 04" />
                   <div class="materal-textbox">
                     <p class="m_title">얼림</p>
@@ -986,7 +986,7 @@
             <!-- 기타 소재 카테고리 -->
             <div class="material-goods etc">
               <div class="material-goods-card">
-                <a href="#">
+                <a href="detail-page.html">
                   <img src="images/material images/pd_img (18).png" alt="소재별 굿즈 01" />
                   <div class="materal-textbox">
                     <p class="m_title">리본베어</p>
@@ -1003,7 +1003,7 @@
                 </a>
               </div>
               <div class="material-goods-card">
-                <a href="#">
+                <a href="detail-page.html">
                   <img src="images/material images/pd_img (19).png" alt="소재별 굿즈 02" />
                   <div class="materal-textbox">
                     <p class="m_title">달리즘</p>
@@ -1021,7 +1021,7 @@
                 </a>
               </div>
               <div class="material-goods-card hidden">
-                <a href="#">
+                <a href="detail-page.html">
                   <img src="images/material images/pd_img (24).png" alt="소재별 굿즈 03" />
                   <div class="materal-textbox">
                     <p class="m_title">리슬</p>
@@ -1038,7 +1038,7 @@
                 </a>
               </div>
               <div class="material-goods-card hidden">
-                <a href="#">
+                <a href="detail-page.html">
                   <img src="images/material images/pd_img (21).png" alt="소재별 굿즈 04" />
                   <div class="materal-textbox">
                     <p class="m_title">월하담</p>
@@ -1067,12 +1067,12 @@
     <section class="popular-items-section searchable" id="popular">
       <div class="container">
         <h2 class="section-title">인기 아이템</h2>
-        <a href="#" class="more-link">더 보기</a>
+        <p class="more-link">더 보기</p>
         <!-- 제품 그리드 -->
         <div class="product-grid">
           <!-- 1번 상품 -->
           <div class="product-item" data-aos="fade-up">
-            <a href="#" class="product-item-click"></a>
+            <a href="detail-page.html" class="product-item-click"></a>
             <div class="ranking-badge"><br />1위</div>
             <img src="images/product images/pd_img (1).png" alt="모어포 모레 플라스틱 비누받침" class="product-image" />
             <p class="product-brand">모어포 모레</p>
@@ -1089,7 +1089,7 @@
           </div>
           <!-- 2번 상품 -->
           <div class="product-item" data-aos="fade-up" data-aos-delay="100">
-            <a href="#" class="product-item-click"></a>
+            <a href="detail-page.html" class="product-item-click"></a>
             <div class="ranking-badge"><br />2위</div>
             <img src="images/product images/pd_img (6).png" alt="도자 귀걸이 반지 선물세트" class="product-image" />
             <p class="product-brand">아차시픈</p>
@@ -1105,7 +1105,7 @@
           </div>
           <!-- 3번 상품 -->
           <div class="product-item" data-aos="fade-up" data-aos-delay="200">
-            <a href="#" class="product-item-click"></a>
+            <a href="detail-page.html" class="product-item-click"></a>
             <div class="ranking-badge"><br />3위</div>
             <img src="images/product images/pd_img (17).png" alt="거북이 보틀 오프너" class="product-image" />
             <p class="product-brand">피그랩</p>
@@ -1121,7 +1121,7 @@
           </div>
           <!-- 4번 상품 -->
           <div class="product-item" data-aos="fade-up" data-aos-delay="300">
-            <a href="#" class="product-item-click"></a>
+            <a href="detail-page.html" class="product-item-click"></a>
             <div class="ranking-badge"><br />4위</div>
             <img src="images/product images/pd_img (16).png" alt="리사이클 유리팔찌" class="product-image" />
             <p class="product-brand">유리노리</p>
@@ -1139,7 +1139,7 @@
           </div>
           <!-- 5번 상품 -->
           <div class="product-item" data-aos="fade-up" data-aos-delay="400">
-            <a href="#" class="product-item-click"></a>
+            <a href="detail-page.html" class="product-item-click"></a>
             <div class="ranking-badge"><br />5위</div>
             <img src="images/product images/pd_img (11).png" alt="헌의류 곱창밴드" class="product-image" />
             <p class="product-brand">DABOK</p>
@@ -1155,7 +1155,7 @@
           </div>
           <!-- 6번 상품 -->
           <div class="product-item" data-aos="fade-up" data-aos-delay="500">
-            <a href="#" class="product-item-click"></a>
+            <a href="detail-page.html" class="product-item-click"></a>
             <div class="ranking-badge"><br />6위</div>
             <img src="images/product images/pd_img (10).png" alt="양말 목 체커보드백" class="product-image" />
             <p class="product-brand">프로젝트 노하우</p>
@@ -1171,7 +1171,7 @@
           </div>
           <!-- 7번 상품 -->
           <div class="product-item" data-aos="fade-up" data-aos-delay="600">
-            <a href="#" class="product-item-click"></a>
+            <a href="detail-page.html" class="product-item-click"></a>
             <div class="ranking-badge"><br />7위</div>
             <img src="images/product images/pd_img (9).png" alt="폐목 우드 트레이" class="product-image" />
             <p class="product-brand">비비작 공작소</p>
@@ -1189,7 +1189,7 @@
           </div>
           <!-- 8번 상품 -->
           <div class="product-item" data-aos="fade-up" data-aos-delay="700">
-            <a href="#" class="product-item-click"></a>
+            <a href="detail-page.html" class="product-item-click"></a>
             <div class="ranking-badge"><br />8위</div>
             <img src="images/product images/pd_img (15).png" alt="플라스틱 책선반" class="product-image" />
             <p class="product-brand">로샤드 스튜디오</p>
