픽스버튼 cs버튼수정, 로그인버튼  오류 수정

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <!-- 로그인 버튼 -->
     <div class="fixed-buttons login-btn">
       <div class="loginBt">
-        <a href="#" onclick="gtag('event', 'click', {'event_category': 'Button', 'event_label': 'Login Button'});">
+        <a href="#">
           <img src="images/btn/user-login.png" alt="유저 아이콘" class="loginbtn_img" />
         </a>
       </div>
