페이먼트 추가, 픽스 버튼 수정, 마테리얼 반응형 수정, 장바구니 디자인 A->B 복사

--- a/detail-page.html
+++ b/detail-page.html
@@ -425,7 +425,7 @@
               </ul>
               <div class="detail-btn">
                 <a href=""><button class="detail-btn-cart">장바구니</button></a>
-                <a href=""><button class="detail-btn-buy">구매하기</button></a>
+                <a href="payment.html"><button class="detail-btn-buy">구매하기</button></a>
               </div>
             </div>
           </div>
