상세세이지 이미지 클릭시 변경

--- a/detail-page.html
+++ b/detail-page.html
@@ -384,13 +384,13 @@
             <div class="detail-product-img">
               <div class="detail-breadcrumb">홈 > 카테고리 > 유리</div>
               <div class="dp-main-image">
-                <img src="images/product images/pd_img (12).png" alt="바다 한 조각" class="active" id="dpmainimg" />
+                <img src="images/product images/pd_img (12).png" alt="바다 한 조각" class="dpmainimg" id="dpmainimg" />
               </div>
               <div class="dp-sub-images">
                 <img src="images/product images/pd_img (12-1).png" alt="바다 한 조각 이미지1" onclick="changeImage('dpmainimg', this)" />
                 <img src="images/product images/pd_img (12-2).png" alt="바다 한 조각 이미지2" onclick="changeImage('dpmainimg', this)" />
                 <img src="images/product images/pd_img (12-3).png" alt="바다 한 조각 이미지3" onclick="changeImage('dpmainimg', this)" />
-                <img src="images/detail/Group 48349.png" alt="바다 한 조각 이미지4" onclick="changeImage('dpmainimg', this)" />
+                <img src="images/product images/pd_img (12).png" alt="바다 한 조각 이미지4" onclick="changeImage('dpmainimg', this)" />
               </div>
             </div>
             <!-- 상품 정보영역 -->
@@ -414,7 +414,7 @@
                 </li>
                 <li class="detail-info-line">
                   <p>배송비</p>
-                  <span>3000원 <span>(5만원 이상 구매시 무료배송)</span></span>
+                  <span>3000원 <span><br />(5만원 이상 구매시 무료배송)</span></span>
                 </li>
                 <li class="detail-info-line">
                   <p>카드추가혜택</p>
@@ -437,6 +437,7 @@
 
           <!-- 상품 설명 탭 내용 -->
           <div class="detail-tab-content" id="detail-description">
+            <div class="detail-tab-description-bline"></div>
             <div class="detail-image-container detail-card">
               <img src="images/detail/suncatcher.png" alt="상품설명" id="mainImage" />
             </div>
@@ -444,6 +445,7 @@
 
           <!-- 브랜드 소개 탭 내용 -->
           <div class="detail-tab-content" id="detail-brand" style="display: none">
+            <div class="detail-tab-brand-bline"></div>
             <div class="detail-image-brand detail-card">
               <img src="images/detail/suncatcher-brand.png" alt="브랜드" id="brandImage" />
             </div>
