인기,머테리얼 반응형 수정

--- a/index.html
+++ b/index.html
@@ -1080,7 +1080,7 @@
             <p class="product-price"><span class="sale-item">21,000원</span>16,500원</p>
             <div class="popular-rating">
               <img src="images/B/icon/star.png" alt="별점" class="rating-icon" />
-              <span>(11,347)</span>
+              <span>리뷰 (11,347)</span>
             </div>
             <div class="add-to-cart">
               <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="모어포 모레 플라스틱 비누받침" data-price="21000" />
@@ -1097,7 +1097,7 @@
             <p class="product-price">56,000원</p>
             <div class="popular-rating">
               <img src="images/B/icon/star.png" alt="별점" class="rating-icon" />
-              <span>(8,856)</span>
+              <span>리뷰 (8,856)</span>
             </div>
             <div class="add-to-cart">
               <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="도자 귀걸이 반지 선물세트" data-price="56000" />
@@ -1113,7 +1113,7 @@
             <p class="product-price">12,300원</p>
             <div class="popular-rating">
               <img src="images/B/icon/star.png" alt="별점" class="rating-icon" />
-              <span>(7,724)</span>
+              <span>리뷰 (7,724)</span>
             </div>
             <div class="add-to-cart">
               <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="거북이 보틀 오프너" data-price="12300" />
@@ -1129,7 +1129,7 @@
             <p class="product-price"><span class="sale-item">32,000원</span>21,000원</p>
             <div class="popular-rating">
               <img src="images/B/icon/star.png" alt="별점" class="rating-icon" />
-              <span>(6,249)</span>
+              <span>리뷰 (6,249)</span>
             </div>
             <div class="add-to-cart">
               <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="리사이클 유리팔찌" data-price="32000" />
@@ -1147,7 +1147,7 @@
             <p class="product-price">7,900원</p>
             <div class="popular-rating">
               <img src="images/B/icon/star.png" alt="별점" class="rating-icon" />
-              <span>(5,237)</span>
+              <span>리뷰 (5,237)</span>
             </div>
             <div class="add-to-cart">
               <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="헌의류 곱창밴드" data-price="7900" />
@@ -1163,7 +1163,7 @@
             <p class="product-price">15,000원</p>
             <div class="popular-rating">
               <img src="images/B/icon/star.png" alt="별점" class="rating-icon" />
-              <span>(3,856)</span>
+              <span>리뷰 (3,856)</span>
             </div>
             <div class="add-to-cart">
               <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="양말 목 체커보드백" data-price="15000" />
@@ -1179,7 +1179,7 @@
             <p class="product-price"><span class="sale-item">35,000원</span>28,000원</p>
             <div class="popular-rating">
               <img src="images/B/icon/star.png" alt="별점" class="rating-icon" />
-              <span>(2,261)</span>
+              <span>리뷰 (2,261)</span>
             </div>
             <div class="add-to-cart">
               <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="폐목 우드 트레이" data-price="35000" />
@@ -1197,7 +1197,7 @@
             <p class="product-price">38,000원</p>
             <div class="popular-rating">
               <img src="images/B/icon/star.png" alt="별점" class="rating-icon" />
-              <span>(1,832)</span>
+              <span>리뷰 (1,832)</span>
             </div>
             <div class="add-to-cart">
               <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="플라스틱 책선반" data-price="38000" />
