--- a/detail-page.html
+++ b/detail-page.html
@@ -257,7 +257,7 @@
                               <img src="images/A/icon/popup-icon/user_icon_my.png" alt="유저 아이콘" />
                             </a>
                           </div>
-
+  
                           <!-- <div class="cartBt">
                             <a href="#">
                               <img src="images/A/icon/popup-icon/cart-icon.svg" alt="카트 아이콘" />
@@ -348,13 +348,12 @@
                     <img src="images/A/icon/popup-icon/user-icon.svg" alt="유저 아이콘" />
                   </a>
                 </div>
-                <div class="loginBt_my" style="display: none">
-                  <!-- 초기에는 감춰져야 함 -->
+                <div class="loginBt_my" style="display: none;"> <!-- 초기에는 감춰져야 함 -->
                   <a href="#">
                     <img src="images/A/icon/popup-icon/user_icon_my.svg" alt="유저 아이콘" />
                   </a>
                 </div>
-
+  
                 <!-- <div class="cartBt">
                   <a href="#">
                     <img src="images/A/icon/popup-icon/cart-icon.svg" alt="카트 아이콘" />
