--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                       <input type="text" placeholder="입력 후 엔터" />
                     </div>
                     <ul class="side-top-menu">
-                      <li><a href="#eventbanner">이벤트</a></li>
+                      <li><a href="#event">이벤트</a></li>
                       <li><a href="#popular">인기</a></li>
                       <li><a href="#brands">브랜드</a></li>
                       <li><a href="#review">리뷰</a></li>
@@ -418,7 +418,7 @@
                 </div>
               </div>
             </li>
-            <li><a href="#eventbanner">이벤트</a></li>
+            <li><a href="#event">이벤트</a></li>
             <li><a href="#popular">인기</a></li>
             <!-- <li><a href="#">구독</a></li> -->
             <li><a href="#brands">브랜드</a></li>
@@ -449,10 +449,9 @@
                 <a href="#">
                   <img src="images/A/icon/popup-icon/user-icon.svg" alt="유저 아이콘" />
                 </a>
-              </div>
-
-              <div class="loginBt_my" style="display: none;"> 
-
+              </div> -->
+              <!-- <div class="loginBt_my" style="display: none">
+                
                 <a href="#">
                   <img src="images/A/icon/popup-icon/user_icon_my.svg" alt="유저 아이콘" />
                 </a>
@@ -636,11 +635,11 @@
             </div>
             <div class="swiper-slide banne-slide">
               <img src="images/B/main_banner/1920_banner04-2.png" alt="배너1_1920" class="b1920px" />
-              <img src="images/b/banner/768_banner04.png" alt="배너1_1920" class="b768px" />
+              <img src="images/B/banner/768_banner04.png" alt="배너1_1920" class="b768px" />
             </div>
             <div class="swiper-slide banne-slide">
               <img src="images/B/main_banner/1920_banner05-2.png" alt="배너1_1920" class="b1920px" />
-              <img src="images/b/banner/768_banner05.png" alt="배너1_1920" class="b768px" />
+              <img src="images/B/banner/768_banner05.png" alt="배너1_1920" class="b768px" />
             </div>
           </div>
         </div>
