카트 위치 정렬

--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,7 @@
             <img src="images/product images/pd_img (1).png" alt="모어포 모레 플라스틱 비누받침" class="product-image" />
             <p class="product-brand">모어포 모레</p>
             <p class="product-name">플라스틱 비누받침</p>
-            <p class="product-price"><span class="sale-item">21,000원</span>16,500원</p>
+            <p class="product-price scratch-price"><span class="sale-item">21,000원</span>16,500원</p>
             <div class="popular-rating">
               <img src="images/B/icon/star.png" alt="별점" class="rating-icon" />
               <span>리뷰 (11,347)</span>
@@ -1128,7 +1128,7 @@
             <img src="images/product images/pd_img (16).png" alt="리사이클 유리팔찌" class="product-image" />
             <p class="product-brand">유리노리</p>
             <p class="product-name">리사이클 유리팔찌</p>
-            <p class="product-price"><span class="sale-item">32,000원</span>21,000원</p>
+            <p class="product-price scratch-price"><span class="sale-item">32,000원</span>21,000원</p>
             <div class="popular-rating">
               <img src="images/B/icon/star.png" alt="별점" class="rating-icon" />
               <span>리뷰 (6,249)</span>
@@ -1177,7 +1177,7 @@
             <img src="images/product images/pd_img (9).png" alt="폐목 우드 트레이" class="product-image" />
             <p class="product-brand">비비작 공작소</p>
             <p class="product-name">폐목 우드 트레이</p>
-            <p class="product-price"><span class="sale-item">35,000원</span>28,000원</p>
+            <p class="product-price scratch-price" ><span class="sale-item">35,000원</span>28,000원</p>
             <div class="popular-rating">
               <img src="images/B/icon/star.png" alt="별점" class="rating-icon" />
               <span>리뷰 (2,261)</span>
