상세페이지 ,소재 인기아이템 리뷰

--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
                     <p><span class="price_bold">21,000원</span></p>
                     <div class="materal-rating">
                       <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
-                      <span>(17,347)</span>
+                      <span>리뷰(17,347)</span>
                     </div>
                   </div>
                   <div class="add-to-cart1">
@@ -715,7 +715,7 @@
                     <p><span class="price_bold">56,000원</span></p>
                     <div class="materal-rating">
                       <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
-                      <span>(13,417)</span>
+                      <span>리뷰(13,417)</span>
                     </div>
                   </div>
                   <div class="add-to-cart1">
@@ -739,7 +739,7 @@
                     <p><span class="price_bold">32,000원</span></p>
                     <div class="materal-rating">
                       <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
-                      <span>(11,347)</span>
+                      <span>리뷰(11,347)</span>
                     </div>
                   </div>
                   <div class="add-to-cart1">
@@ -763,7 +763,7 @@
                     <p><span class="price_bold">16,000원</span></p>
                     <div class="materal-rating">
                       <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
-                      <span>(28,347)</span>
+                      <span>리뷰(28,347)</span>
                     </div>
                   </div>
                   <div class="add-to-cart1">
@@ -783,7 +783,7 @@
                     <p><span class="price_bold">19,000원</span></p>
                     <div class="materal-rating">
                       <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
-                      <span>(8,377)</span>
+                      <span>리뷰(8,377)</span>
                     </div>
                   </div>
                   <div class="add-to-cart1">
@@ -800,7 +800,7 @@
                     <p><span class="price_bold">45,000원</span></p>
                     <div class="materal-rating">
                       <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
-                      <span>(6,375)</span>
+                      <span>리뷰(6,375)</span>
                     </div>
                   </div>
                   <div class="add-to-cart1">
@@ -817,7 +817,7 @@
                     <p><span class="price_bold">22,000원</span></p>
                     <div class="materal-rating">
                       <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
-                      <span>(12,347)</span>
+                      <span>리뷰(12,347)</span>
                     </div>
                   </div>
                   <div class="add-to-cart1">
@@ -834,7 +834,7 @@
                     <p><span class="price_bold">11,000원</span></p>
                     <div class="materal-rating">
                       <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
-                      <span>(9,347)</span>
+                      <span>리뷰(9,347)</span>
                     </div>
                   </div>
                   <div class="add-to-cart1">
@@ -854,7 +854,7 @@
                     <p><span class="price_bold">43,000원</span></p>
                     <div class="materal-rating">
                       <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
-                      <span>(5,347)</span>
+                      <span>리뷰(5,347)</span>
                     </div>
                   </div>
                   <div class="add-to-cart1">
@@ -871,7 +871,7 @@
                     <p><span class="price_bold">61,750원</span></p>
                     <div class="materal-rating">
                       <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
-                      <span>(16,347)</span>
+                      <span>리뷰(16,347)</span>
                     </div>
                   </div>
                   <div class="add-to-cart1">
@@ -888,7 +888,7 @@
                     <p><span class="price_bold">35,000원</span></p>
                     <div class="materal-rating">
                       <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
-                      <span>(10,347)</span>
+                      <span>리뷰(10,347)</span>
                     </div>
                   </div>
                   <div class="add-to-cart1">
@@ -905,7 +905,7 @@
                     <p><span class="price_bold">56,000원</span></p>
                     <div class="materal-rating">
                       <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
-                      <span>(11,347)</span>
+                      <span>리뷰(11,347)</span>
                     </div>
                   </div>
                   <div class="add-to-cart1">
@@ -922,10 +922,10 @@
                   <div class="materal-textbox">
                     <p class="m_title">바다 한 조각</p>
                     <p>바다유리 선캐처</p>
-                    <p><span class="price_bold">19,500원</span></p>
+                    <p><span class="price_bold">35,000원</span></p>
                     <div class="materal-rating">
                       <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
-                      <span>(7,347)</span>
+                      <span>리뷰(7,347)</span>
                     </div>
                   </div>
                   <div class="add-to-cart1">
@@ -942,7 +942,7 @@
                     <p><span class="price_bold">59,800원</span></p>
                     <div class="materal-rating">
                       <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
-                      <span>(11,347)</span>
+                      <span>리뷰(11,347)</span>
                     </div>
                   </div>
                   <div class="add-to-cart1">
@@ -959,7 +959,7 @@
                     <p><span class="price_bold">24,300원</span></p>
                     <div class="materal-rating">
                       <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
-                      <span>(6,347)</span>
+                      <span>리뷰(6,347)</span>
                     </div>
                   </div>
                   <div class="add-to-cart1">
@@ -976,7 +976,7 @@
                     <p><span class="price_bold">21,000원</span></p>
                     <div class="materal-rating">
                       <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
-                      <span>(11,347)</span>
+                      <span>리뷰(11,347)</span>
                     </div>
                   </div>
                   <div class="add-to-cart1">
@@ -996,7 +996,7 @@
                     <p><span class="price_bold">35,000원</span></p>
                     <div class="materal-rating">
                       <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
-                      <span>(4,347)</span>
+                      <span>리뷰(4,347)</span>
                     </div>
                   </div>
                   <div class="add-to-cart1">
@@ -1014,7 +1014,7 @@
 
                     <div class="materal-rating">
                       <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
-                      <span>(4,347)</span>
+                      <span>리뷰(4,347)</span>
                     </div>
                   </div>
                   <div class="add-to-cart1">
@@ -1031,7 +1031,7 @@
                     <p><span class="price_bold">29,100원</span></p>
                     <div class="materal-rating">
                       <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
-                      <span>(6,347)</span>
+                      <span>리뷰(6,347)</span>
                     </div>
                   </div>
                   <div class="add-to-cart1">
@@ -1048,7 +1048,7 @@
                     <p><span class="price_bold">9,500원</span></p>
                     <div class="materal-rating">
                       <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
-                      <span>(8,347)</span>
+                      <span>리뷰(8,347)</span>
                     </div>
                   </div>
                   <div class="add-to-cart1">
@@ -1177,7 +1177,7 @@
             <img src="images/product images/pd_img (9).png" alt="폐목 우드 트레이" class="product-image" />
             <p class="product-brand">비비작 공작소</p>
             <p class="product-name">폐목 우드 트레이</p>
-            <p class="product-price scratch-price" ><span class="sale-item">35,000원</span>28,000원</p>
+            <p class="product-price scratch-price"><span class="sale-item">35,000원</span>28,000원</p>
             <div class="popular-rating">
               <img src="images/B/icon/star.png" alt="별점" class="rating-icon" />
               <span>리뷰 (2,261)</span>
