--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                       <input type="text" placeholder="입력 후 엔터" />
                     </div>
                     <ul class="side-top-menu">
-                      <li><a href="#event">이벤트</a></li>
+                      <li><a href="#eventbanner">이벤트</a></li>
                       <li><a href="#popular">인기</a></li>
                       <li><a href="#brands">브랜드</a></li>
                       <li><a href="#review">리뷰</a></li>
@@ -416,7 +416,7 @@
                 </div>
               </div>
             </li>
-            <li><a href="#event">이벤트</a></li>
+            <li><a href="#eventbanner">이벤트</a></li>
             <li><a href="#popular">인기</a></li>
             <!-- <li><a href="#">구독</a></li> -->
             <li><a href="#brands">브랜드</a></li>
@@ -466,7 +466,7 @@
         <div class="header-bottom">
           <ul class="navi-bottom">
             <li><a href="#" class="category-title">카테고리</a></li>
-            <li><a href="#event">이벤트</a></li>
+            <li><a href="#eventbanner">이벤트</a></li>
             <li><a href="#popular">인기</a></li>
             <!-- <li><a href="#">구독</a></li> -->
             <li><a href="#brands">브랜드</a></li>
