--- a/detail-page.html
+++ b/detail-page.html
@@ -262,20 +262,20 @@
                 <li class="detail-info-line">
                   <p>카드추가혜택</p>
                   <span
-                    >oo카드결제시 15%추가 할인<span><br />(최대 3만원 할인)</span></span
+                    >그린카드결제시 15%추가 할인<span><br />(최대 3만원 할인)</span></span
                   >
                 </li>
               </ul>
               <div class="detail-btn">
-                <a href=""><button type="button" class="detail-btn-cart">장바구니</button></a>
-                <a href="payment.html"><button class="detail-btn-buy" type="button">구매하기</button></a>
+                <a href="" ><p class="detail-btn-cart">장바구니</p></a>
+                <a href="payment.html" ><p class="detail-btn-buy">구매하기</p></a>
               </div>
             </div>
           </div>
           <!-- 상품소개/브랜드 -->
           <div class="detail-tab-container">
-            <button type="button" class="detail-tab-button" id="description-tab">상품 설명</button>
-            <button type="button" class="detail-tab-button" id="brand-tab">브랜드 소개</button>
+            <p type="button" class="detail-tab-button" id="description-tab">상품 설명</p>
+            <p type="button" class="detail-tab-button" id="brand-tab">브랜드 소개</p>
           </div>
 
           <!-- 상품 설명 탭 내용 -->
