프리티어 수정, 페이먼트 픽스버튼 삭제

--- a/about_us.html
+++ b/about_us.html
@@ -56,8 +56,6 @@
       html {
         scroll-behavior: smooth;
       }
-
-
     </style>
   </head>
   <body>
@@ -129,7 +127,7 @@
                               <img src="images/A/icon/popup-icon/user_icon_my.png" alt="유저 아이콘" />
                             </a>
                           </div>
-  
+
                           <!-- <div class="cartBt">
                             <a href="#">
                               <img src="images/A/icon/popup-icon/cart-icon.svg" alt="카트 아이콘" />
@@ -220,12 +218,13 @@
                     <img src="images/A/icon/popup-icon/user-icon.svg" alt="유저 아이콘" />
                   </a>
                 </div>
-                <div class="loginBt_my" style="display: none;"> <!-- 초기에는 감춰져야 함 -->
+                <div class="loginBt_my" style="display: none">
+                  <!-- 초기에는 감춰져야 함 -->
                   <a href="#">
                     <img src="images/A/icon/popup-icon/user_icon_my.svg" alt="유저 아이콘" />
                   </a>
                 </div>
-  
+
                 <!-- <div class="cartBt">
                   <a href="#">
                     <img src="images/A/icon/popup-icon/cart-icon.svg" alt="카트 아이콘" />
